# Rite

./: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/api/workflows/: route.ts
app/api/workflows/[id]/: route.ts
app/api/workflows/[id]/commit/: route.ts
app/api/workflows/[id]/seal/: route.ts
app/api/workflows/[id]/verify-step/: route.ts
app/workflow/[id]/: page.tsx
app/workflow/[id]/verify-step/: page.tsx
components/: create-workflow-form.tsx  verify-step.tsx  workflow-actions.tsx  workflow-list.tsx
contracts/: Rite.sol
docs/: launch-tweet.md
lib/: agents.ts  chain.ts  explorer.ts  hashing.ts  merkle.ts  rite-abi.ts  store.ts  types.ts
scripts/: export-zk-input.ts
zk/: Cargo.toml  README.md  input.json
zk/contracts/: SP1RiteVerifier.sol
zk/lib/: Cargo.toml
zk/lib/src/: lib.rs
zk/program/: Cargo.toml
zk/program/src/: main.rs
zk/script/: Cargo.toml
zk/testdata/: vector.json
