[package]
name = "rite-script"
version = "0.1.0"
edition = "2021"

# standalone: requires the SP1 toolchain (curl -L https://sp1up.succinct.xyz | bash)
[workspace]

[dependencies]
sp1-sdk = { version = "6.3.1", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
rite-lib = { path = "../lib" }

[build-dependencies]
sp1-build = "6.3.1"

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"
